2015-07-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66922
	* gcc.target/i386/pr66922.c: New test.

2015-07-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66866
	* g++.dg/pr66866.C: New test.

2015-07-17  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2015-07-10  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66703
	* gcc.target/i386/readeflags-1.c (readeflags_test): Declare with
	__attribute__((noinline, noclone)).  Change "x" to "volatile char"
	type to prevent possible flag-clobbering zero-extensions.
	* gcc.target/i386/pr66703.c: New test.

2015-07-17  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2015-07-09  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66814
	* gcc.target/i386/pr66814.c: New test.

2015-07-16  Marek Polacek  <polacek@redhat.com>

	2015-07-08  Marek Polacek  <polacek@redhat.com>
	Backported from mainline

	PR c++/66748
	* g++.dg/abi/abi-tag15.C: New test.

2015-07-10  Mantas Mikaitis  <Mantas.Mikaitis@arm.com>

	* gcc.target/arm/macro_defs0.c: New test.
	* gcc.target/arm/macro_defs1.c: New test.
	* gcc.target/arm/macro_defs2.c: New test.

2015-07-08  Martin Jambor  <mjambor@suse.cz>

	PR ipa/61820
	Backport from mainline r212915
	2014-07-22  Martin Jambor  <mjambor@suse.cz>

	PR ipa/61160
	* g++.dg/ipa/pr61160-3.C (main): Return zero.

2015-07-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	Backport from mainline r224725
	2015-06-22  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/65914
	* g++.dg/torture/pr65914.C:  New.

2015-07-01  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	Backport from mainline
        2015-06-24  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/63408
	* gcc.target/arm/pr63408.c: New test.

2015-06-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66412
	* gcc.target/i386/pr66412.c: New test.

2015-06-26  Release Manager

	* GCC 4.9.3 released.

2015-06-19  Christophe Lyon  <christophe.lyon@linaro.org>

	Backport from mainline r224649.